css/legacy20.css
*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0px;
    padding: 0px;
}

body {
    margin: 0;
    font-family: Arial, Helvetica, sans-serif;
    background: #fff;
    width: 100vw;
}

/*Styles for header elements*/
.title {
    text-align: center;
    color: #000;
    margin: 2%;
}

.title-2 {
    text-align: left;
    padding-left: 2%;
    margin: 5% 0 0 5%;
}

/*Cover*/
.cover{
    background-color: #000;
    height: 70vh;
    width: 100vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.cover .cover-logo img{
    width: 50%;
}
.cover-logo{
    display: flex;
    justify-content: space-evenly;
}

/*Memories*/
.container {
    width: 70%;
    height: 70%;
}

.gallery-block {
    padding-bottom: 60px;
    padding-top: 60px;
    margin: 40px;
    border-radius: 200px;
    border: 2px solid #000000;
}
/*style heading*/
.heading {
    margin-bottom: 50px;
    text-align: center;
}

h1 {
    font-weight: bold;
    font-weight: 900;
    font-size: 2.6em;
    font-family: "Gemunu Libre", sans-serif;
    color: #ffd401;
    text-transform: uppercase;
}

/*style images section*/
.gallery-block.compact-gallery .item {
    overflow: hidden;
    margin-bottom: 0;
    background: black;
    opacity: 1;
}

.gallery-block.compact-gallery .item .image {
    transition: 0.8s ease;
}

.gallery-block.compact-gallery .item .info {
    position: relative;
    display: inline-block;
}

.gallery-block.compact-gallery .item .description {
    display: grid;
    position: absolute;
    bottom: 0;
    left: 0;
    color: #fff;
    padding: 10px;
    font-size: 10px;
    line-height: 18px;
    width: 100%;
    padding-top: 15px;
    padding-bottom: 15px;
    opacity: 1;
    color: #fff;
    transition: 0.8s ease;
    text-align: center;
    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
    background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.39));
}

.gallery-block.compact-gallery .item .description .description-heading {
    font-size: 1em;
    font-weight: bold;
}

/*Timeline*/
.timeline {
    position: relative;
    width: 100%;
    max-width: 1140px;
    margin: 0 auto;
    padding: 15px 0;
}

.timeline::after {
    content: "";
    position: absolute;
    width: 2px;
    background: #000;
    top: 0;
    bottom: 0;
    left: 50%;
    margin-left: -1px;
}

.timeline-container {
    padding: 15px 30px;
    position: relative;
    background: inherit;
    width: 50%;
}

.timeline-container.left {
    left: 0;
}

.timeline-container.right {
    left: 50%;
}

.timeline-container::after {
    content: "";
    position: absolute;
    width: 16px;
    height: 16px;
    top: calc(50% - 8px);
    right: -8px;
    background: #fff;
    border: 2px solid #000;
    border-radius: 16px;
    z-index: 1;
}

.timeline-container.right::after {
    left: -8px;
}

.timeline-container::before {
    content: "";
    position: absolute;
    width: 50px;
    height: 2px;
    top: calc(50% - 1px);
    right: 8px;
    background: #000;
    z-index: 1;
}

.timeline-container.right::before {
    left: 8px;
}

.timeline-container .date {
    position: absolute;
    display: inline-block;
    top: calc(50% - 8px);
    text-align: center;
    font-size: 14px;
    font-weight: bold;
    color: #000;
    text-transform: uppercase;
    letter-spacing: 1px;
    z-index: 1;
}

.timeline-container.left .date {
    right: -75px;
}

.timeline-container.right .date {
    left: -75px;
}

.timeline-container .icon {
    position: absolute;
    display: inline-block;
    width: 40px;
    height: 40px;
    padding: 9px 0;
    top: calc(50% - 20px);
    background: #ffd401;
    border: 2px solid #000;
    border-radius: 40px;
    text-align: center;
    font-size: 18px;
    color: #ffd401;
    z-index: 1;
}

.timeline-container.left .icon {
    right: 56px;
}

.timeline-container.right .icon {
    left: 56px;
}

.timeline-container .content {
    padding: 30px 90px 30px 30px;
    background: #ffd401;
    position: relative;
    border-radius: 500px;
}

.timeline-container.right .content {
    padding: 30px 30px 30px 90px;
    border-radius: 500px;
}

.timeline-container .content h2 {
    margin: 0 0 10px 0;
    font-size: 2em;
    text-align: center;
    font-weight: bold;
    color: #000;
    display: inline;
    padding: 0 2%;
}


.timeline-container .content .btn {
    margin: 0;
    font-size: 15px;
    line-height: 22px;
    color: #ffd401;
    background-color: #000;
    border-radius: 15px 0 15px 0px;
}

/*Line break (Horizontal Line)*/
.line {
    width: 75%;
    height: fit-content;
    margin: 2% auto;
    border: 1px double #000;
    background-color: #fff;
    border-radius: 50px;
    box-shadow: 0px 0px 5px 1px #3b3b3b;
}

.inner-line {
    padding: 0;
    background-color: #ffd401;
    background-blend-mode: multiply;
    box-sizing: border-box;
    margin: 0 auto;
    height: 1px;
    border: none;
    width: 75%;
}

/*Slider*/
.slider-item{
    display: none;
}

.slider-active{
    display:block;
}

.slides{
    width: 1365px;
    height: 1365px;
    margin: 0 auto;
    max-width: 75vw;
    max-height: 75vh;
    background-size: 75vw 75vh;
    display:flex;
    justify-content: center;
    align-items: center;
}

#recruitment-slider{
    background-image: url('../img/recruitment/img1.jpg');
}


#orientation-slider{
    background-image: url('../img/orientation/img1.jpg');
}

#ecu-slider{
    background-image: url('../img/ecu/img1.jpg');
}

#general-slider{
    background-image: url('../img/general/img1.jpg');
}

#spark-slider{
    background-image: url('../img/spark/img1.jpg');
}

#first-step-slider{
    background-image: url('../img/first-step/img1.jpg');
}

#closing-slider{
    background-image: url('../img/closing/img1.jpg');
}

.slider-button{
    height: 5vh;
    width: 50px;
    background-color: #000;
    color: #fff;
    border-radius: 500px;
    margin: 0 40vw;
    position: relative;
}


/*Media Query*/
@media only screen and (max-width: 875px){
    .cover .cover-logo img{
        width: 30%;
    }
    .cover-logo{
        display: flex;
        justify-content: space-evenly;
    }
}

@media only screen and (max-width: 767.98px) {
    .timeline::after {
        left: 90px;
    }

    .timeline-container {
        width: 100%;
        padding-left: 120px;
        padding-right: 3px;
    }

    .timeline-container.right {
        left: 0%;
    }

    .timeline-container.left::after,
    .timeline-container.right::after {
        left: 82px;
    }

    .timeline-container.left::before,
    .timeline-container.right::before {
        left: 100px;
        border-color: transparent #000 transparent transparent;
    }

    .timeline-container.left .date,
    .timeline-container.right .date {
        right: auto;
        left: 10px;
    }

    .timeline-container.left .icon,
    .timeline-container.right .icon {
        right: auto;
        left: 146px;
    }

    .timeline-container.left .content,
    .timeline-container.right .content {
        padding: 30px 30px 30px 90px;
        border-radius: 500px;
    }
}

@media (min-width: 576px) {
    .gallery-block.compact-gallery .item .description {
        opacity: 0;
    }

    .gallery-block.compact-gallery .item a:hover .description {
        opacity: 1;
    }

    .gallery-block .zoom-on-hover:hover .image {
        transform: scale(1.3);
        opacity: 0.7;
    }
}

@media only screen and (max-width: 460px){
    .timeline-container .content h2{
        font-size: 1.5em
    }
    .timeline-container .content .btn{
        width: 30px;
        height: 30px;
        text-align: center;
    }
    .cover h1{
        font-size: 1.5em;
    }
    .cover{
        height: 50vw;
    }
}

@media only screen and (max-width: 365px) {
    .title-2 {
        padding-left: 1%;
        font-size: 1em;
    }
    .title {
        font-size: 1.5em;
    }
    .timeline-container .content h2{
        font-size: 1em;
    }
    .timeline-container {
        padding-left: 85px;
    }
    .timeline-container::before {
        width: 25px;
    }
    .timeline-container.left .icon,
    .timeline-container.right .icon {
        left: 120px;
    }
}

@media only screen and (max-width: 300px){
    .cover h1{
        font-size: 1.25em;
    }
}

